tests-build/tests/fail/macros_type_mismatch.stderr
error[E0308]: mismatched types
 --> $DIR/macros_type_mismatch.rs:5:5
  |
4 | async fn missing_semicolon_or_return_type() {
  |                                             - possibly return type missing here?
5 |     Ok(())
  |     ^^^^^^- help: consider using a semicolon here: `;`
  |     |
  |     expected `()`, found enum `Result`
  |
  = note: expected unit type `()`
                  found enum `Result<(), _>`

error[E0308]: mismatched types
  --> $DIR/macros_type_mismatch.rs:10:5
   |
9  | async fn missing_return_type() {
   |                                - possibly return type missing here?
10 |     return Ok(());
   |     ^^^^^^^^^^^^^^ expected `()`, found enum `Result`
   |
   = note: expected unit type `()`
                   found enum `Result<(), _>`

error[E0308]: mismatched types
  --> $DIR/macros_type_mismatch.rs:23:5
   |
14 | async fn extra_semicolon() -> Result<(), ()> {
   |                               -------------- expected `Result<(), ()>` because of return type
...
23 |     Ok(());
   |     ^^^^^^^ expected enum `Result`, found `()`
   |
   = note:   expected enum `Result<(), ()>`
           found unit type `()`
help: try adding an expression at the end of the block
   |
23 ~     Ok(());;
24 +     Ok(())
   |
